crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__confirm_dialogs__confirm_dialog_update_preview_jsonb_structured_diff_with_ellipsis.snap
---
source: src/tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                                                                                                            
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ Confirm UPDATE: users ──────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │                                                                                                                 │                        │
│                        │ ✓ LOW RISK                                                                                                      │                        │
│                        │                                                                                                                 │                        │
│                        │ Diff                                                                                                            │                        │
│                        │   config:                                                                                                       │                        │
│                        │     ...                                                                                                         │                        │
│                        │         "nested_a": "unchanged",                                                                                │                        │
│                        │   -     "nested_b": "old_value",                                                                                │────────────────────────┘
│                        │   +     "nested_b": "new_value",                                                                                │────────────────────────┐
│                        │         "nested_c": "unchanged"                                                                                 │                        │
│                        │     ...                                                                                                         │                        │
│                        │                                                                                                                 │                        │
│                        │ SQL Preview                                                                                                     │                        │
│                        │   UPDATE "public"."users"                                                                                       │                        │
│                        │   SET "config" = '{"alpha": 1, "beta": 2, "gamma": 3, "delta": 4, "epsilon": 5, "zeta": {"nested_a":            │                        │
│                        │ "unchanged", "nested_b": "new_value", "nested_c": "unchanged"}, "eta": 7, "theta": 8}'                          │                        │
│                        │   WHERE "id" = '1';                                                                                             │                        │
│                        │                                                                                                                 │                        │
│                        ╰ Enter: Confirm │ Esc/q: Cancel ─────────────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
