crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__confirm_dialogs__confirm_dialog_update_preview_long_jsonb.snap
---
source: src/tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                                                                                                            
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ Confirm UPDATE: users ──────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │                                                                                                                 │                        │
│                        │ ✓ LOW RISK                                                                                                      │                        │
│                        │                                                                                                                 │                        │
│                        │ Diff                                                                                                            │                        │
│                        │   metadata:                                                                                                     │                        │
│                        │     {                                                                                                           │                        │
│                        │   -   "company_size": "enterprise",                                                                             │                        │
│                        │   +   "company_size": "startup",                                                                                │                        │
│                        │       "industries": [                                                                                           │                        │
│                        │         "tech",                                                                                                 │                        │
│                        │   -     "finance",                                                                                              │                        │
│                        │   -     "healthcare"                                                                                            │                        │
│                        │   +     "retail"                                                                                                │                        │
│                        │       ],                                                                                                        │────────────────────────┘
│                        │       "preferences": {                                                                                          │────────────────────────┐
│                        │   -     "notifications": true,                                                                                  │                        │
│                        │   -     "theme": "dark"                                                                                         │                        │
│                        │   +     "language": "ja",                                                                                       │                        │
│                        │   +     "notifications": false,                                                                                 │                        │
│                        │   +     "theme": "light"                                                                                        │                        │
│                        │       }                                                                                                         │                        │
│                        │     ...                                                                                                         │                        │
│                        │                                                                                                                 │                        │
│                        │ SQL Preview                                                                                                     │                        │
│                        │   UPDATE "public"."users"                                                                                       │                        │
│                        │   SET "metadata" = '{"industries": ["tech", "retail"], "company_size": "startup", "preferences":                │                        │
│                        │ {"notifications": false, "theme": "light", "language": "ja"}}'                                                  │                        │
│                        │   WHERE "id" = '1';                                                                                             │                        │
│                        │                                                                                                                 │                        │
│                        ╰ Enter: Confirm │ Esc/q: Cancel ─────────────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
